# Kraken-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.cpp
sources/configuration/: configuration_callback_holder.cpp  configuration_callback_holder.h  configuration_handler.cpp  configuration_handler.h  configuration_module.cpp  configuration_module.h
sources/navmesh/: navmesh_edge.h  navmesh_node.cpp  navmesh_node.h  navmesh_triangle.h
sources/obstacles/: RectangularObstacle.cpp  RectangularObstacle.h  circular_obstacle.cpp  circular_obstacle.h  compound_obstacle.cpp  compound_obstacle.h  obstacle.cpp  obstacle.h  rectangular_obstacle.cpp  rectangular_obstacle.h
sources/obstacles/container/: static_obstacles.cpp  static_obstacles.h
sources/struct/: Kinematic.cpp  Kinematic.h  Vector2D.cpp  Vector2D.h  itinerary_point.cpp  itinerary_point.h  kinematic.cpp  kinematic.h  oriented_position_2d.cpp  oriented_position_2d.h  vector_2d.cpp  vector_2d.h
sources/utils/: math_utils.cpp  math_utils.h
tests/: 010-TestVector2D.cpp  010-test_math.cpp  020-test_config.cpp  020-test_obstacles.cpp  CMakeLists.txt  test.ini
